test/invalid/enum_typo.pks
// error: unknown Location 'Ceruleon' — did you mean 'CeruleanCity'?
goal bad {
    navigate(Location::Ceruleon);
}
